--- a/css/styles.css
+++ b/css/styles.css
@@ -961,6 +961,7 @@
   border: 1px solid var(--color-black);
   box-sizing: border-box;
   display: flex;
+  position: sticky;
 }
 .footer {
   align-self: stretch;
@@ -977,7 +978,7 @@
 }
 .dashboard {
   width: 100%;
-  position: relative;
+  position: s;
   overflow: hidden;
   flex-direction: column;
   align-items: flex-start;
